--- a/src/BitooBitImageEditor/EditorPage/ImageEditorPage.xaml
+++ b/src/BitooBitImageEditor/EditorPage/ImageEditorPage.xaml
@@ -164,7 +164,7 @@
 
                     <ImageButton Grid.Row="0" Source="{res:ImageResource done}" Command="{Binding ApplyChangesCommand}" CommandParameter="Apply" HorizontalOptions="EndAndExpand"/>
 
-                    <CollectionView Grid.Row="1" ItemsSource="{Binding ColorCollect}" IsVisible="{Binding ColorsCollectVisible}" HeightRequest="32">
+                    <CollectionView Grid.Row="1" ItemsSource="{Binding ColorCollect}" HeightRequest="32">
                         <CollectionView.ItemsLayout>
                             <LinearItemsLayout Orientation="Horizontal" SnapPointsType="Mandatory" SnapPointsAlignment="Start" ItemSpacing="0" />
                         </CollectionView.ItemsLayout>
@@ -178,10 +178,39 @@
                         </CollectionView.ItemTemplate>
                     </CollectionView>
 
-                    <controls:CustomEditor x:Name="textEditor" Grid.Row="2" IsVisible="{Binding TextVisible}" Text="{Binding CurrentText}" TextColor="{Binding CurrentColor}" FontSize="23" Keyboard="Plain" BackgroundColor="Transparent" Margin="10,4,10,4" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+                    <controls:CustomEditor x:Name="textEditor" Grid.Row="2" IsVisible="{Binding TextVisible}" Text="{Binding CurrentText}" TextColor="{Binding CurrentColor}" FontSize="23" Keyboard="Plain" BackgroundColor="Transparent" Margin="10,8,10,4" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
                 </Grid>
 
+                <Grid VerticalOptions="StartAndExpand" BackgroundColor="Transparent" IsVisible="{Binding PaintVisible}" IsEnabled="{Binding PaintVisible}" >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
+
+                    <StackLayout Grid.Row="0" VerticalOptions="Start" >
+                        <ImageButton Source="{res:ImageResource undo}" Command="{Binding CancelCommand}" CommandParameter="Apply" HorizontalOptions="StartAndExpand" />
+                        <ImageButton Source="{res:ImageResource done}" Command="{Binding ApplyChangesCommand}" CommandParameter="Apply" HorizontalOptions="EndAndExpand" />
+                    </StackLayout>
+
+                    <CollectionView Grid.Row="1" ItemsSource="{Binding ColorCollect}"  HeightRequest="32">
+                        <CollectionView.ItemsLayout>
+                            <LinearItemsLayout Orientation="Horizontal" SnapPointsType="Mandatory" SnapPointsAlignment="Start" ItemSpacing="0" />
+                        </CollectionView.ItemsLayout>
+
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <StackLayout HorizontalOptions="Start" VerticalOptions="Start" HeightRequest="30">
+                                    <Button BackgroundColor="{Binding .}" Command="{Binding BindingContext.SelectItemCommand, Source={x:Reference ThisEditorPage}}" Margin="0" BorderColor="Transparent" BorderWidth="1" CommandParameter="{Binding .}" VerticalOptions="Start" HorizontalOptions="Start" CornerRadius="15" HeightRequest="30" WidthRequest="30"/>
+                                </StackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+
+                    </Grid>
 
                 <Grid VerticalOptions="FillAndExpand" BackgroundColor="Transparent" IsVisible="{Binding StickersVisible}" IsEnabled="{Binding StickersVisible}">
                     <Grid.RowDefinitions>
@@ -220,14 +249,15 @@
 
                 </Grid>
 
-                <StackLayout VerticalOptions="Start" IsVisible="{Binding ButtonsVisible}" IsEnabled="{Binding ButtonsVisible}">
-                    <ImageButton Grid.Column="0" Source="{res:ImageResource arrow_back}" Command="{Binding EditFinishCommand}" HorizontalOptions="EndAndExpand"/>
-                    <ImageButton Grid.Row="0" Source="{res:ImageResource crop_rotate}" Command="{Binding SelectItemCommand}" CommandParameter="{x:Static editorpage:ImageEditType.CropRotate}" HorizontalOptions="End"/>
-                    <ImageButton Grid.Row="0" Source="{res:ImageResource format_shapes}" IsVisible="{Binding Config.CanAddText}" Command="{Binding SelectItemCommand}" CommandParameter="{x:Static editorpage:ImageEditType.Text}" HorizontalOptions="End"/>
-                    <ImageButton Grid.Row="0" Source="{res:ImageResource stickers}" IsVisible="{Binding Config.CanAddStickers}" Command="{Binding SelectItemCommand}" CommandParameter="{x:Static editorpage:ImageEditType.Stickers}" HorizontalOptions="End"/>
-                    <ImageButton Grid.Row="0" Source="{res:ImageResource gesture}" IsVisible="{Binding Config.CanFingerPaint}"  HorizontalOptions="End"/>
-                    <ImageButton Grid.Column="2" Source="{res:ImageResource save}" Command="{Binding EditFinishCommand}" CommandParameter="Save" HorizontalOptions="End"/>
+                <ImageButton Source="{res:ImageResource arrow_back}" Command="{Binding EditFinishCommand}" IsVisible="{Binding ButtonsVisible}" IsEnabled="{Binding ButtonsVisible}" Margin="0,5,0,0" VerticalOptions="Start" HorizontalOptions="Start"/>
 
+
+                <StackLayout VerticalOptions="Start" Orientation="Vertical" IsVisible="{Binding ButtonsVisible}" IsEnabled="{Binding ButtonsVisible}" HorizontalOptions="End" Margin="0,5,5,0">
+                    <ImageButton Source="{res:ImageResource save}" Command="{Binding EditFinishCommand}" CommandParameter="Save" HorizontalOptions="End"/>
+                    <ImageButton Source="{res:ImageResource crop_rotate}" Command="{Binding SelectItemCommand}" CommandParameter="{x:Static editorpage:ImageEditType.CropRotate}" HorizontalOptions="End"/>
+                    <ImageButton Source="{res:ImageResource format_shapes}" IsVisible="{Binding Config.CanAddText}" Command="{Binding SelectItemCommand}" CommandParameter="{x:Static editorpage:ImageEditType.Text}" HorizontalOptions="End"/>
+                    <ImageButton Source="{res:ImageResource stickers}" IsVisible="{Binding Config.CanAddStickers}" Command="{Binding SelectItemCommand}" CommandParameter="{x:Static editorpage:ImageEditType.Stickers}" HorizontalOptions="End"/>
+                    <ImageButton Source="{res:ImageResource gesture}" IsVisible="{Binding Config.CanFingerPaint}" Command="{Binding SelectItemCommand}" CommandParameter="{x:Static editorpage:ImageEditType.Paint}" HorizontalOptions="End"/>
                 </StackLayout>
 
 
