--- a/src/BitooBitImageEditor/EditorPage/ImageEditorPage.xaml
+++ b/src/BitooBitImageEditor/EditorPage/ImageEditorPage.xaml
@@ -13,7 +13,7 @@
              xmlns:forms="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms"
              ios:Page.PrefersStatusBarHidden="True"
              ios:Page.PreferredStatusBarUpdateAnimation="Fade"
-             ios:Page.PrefersHomeIndicatorAutoHidden="true"
+             ios:Page.PrefersHomeIndicatorAutoHidden="True"
              x:Name="ThisEditorPage" x:ClassModifier="internal" >
 
 
@@ -130,7 +130,7 @@
                     </Grid.ColumnDefinitions>
 
 
-                    <CollectionView Grid.Row="0"  ItemsSource="{Binding CropCollect}" IsVisible="{Binding Config.CanChangeCropAspectRatio}" IsEnabled="{Binding Config.CanChangeCropAspectRatio}">
+                    <CollectionView Grid.Row="0"  ItemsSource="{Binding CropCollect}" >
                         <CollectionView.ItemsLayout>
                             <LinearItemsLayout Orientation="Horizontal" SnapPointsType="Mandatory" SnapPointsAlignment="Start" ItemSpacing="0" />
                         </CollectionView.ItemsLayout>
@@ -163,7 +163,7 @@
                     </Grid.ColumnDefinitions>
                     <BoxView Grid.RowSpan="3" BackgroundColor="Black" Opacity="0.7" />
 
-                    <ImageButton Grid.Row="0" Source="{res:ImageResource done}" Command="{Binding ApplyChangesCommand}" CommandParameter="Apply" Margin="0,7,7,0" HorizontalOptions="End" VerticalOptions="Start"/>
+                    <ImageButton Grid.Row="0" Source="{res:ImageResource done}" Command="{Binding ApplyChangesCommand}" CommandParameter="Apply" Margin="0,9,9,0" HorizontalOptions="End" VerticalOptions="Start"/>
 
                     <CollectionView Grid.Row="1" ItemsSource="{Binding ColorCollect}" HeightRequest="32">
                         <CollectionView.ItemsLayout>
@@ -191,8 +191,8 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                  
-                    <ImageButton Grid.Row="0" Source="{res:ImageResource undo}" Command="{Binding CancelCommand}" CommandParameter="Apply" Margin="7,7,0,0" HorizontalOptions="Start" VerticalOptions="Start"/>
-                    <ImageButton Grid.Row="0" Source="{res:ImageResource done}" Command="{Binding ApplyChangesCommand}" CommandParameter="Apply" Margin="0,7,7,0" HorizontalOptions="End" VerticalOptions="Start"/>
+                    <ImageButton Grid.Row="0" Source="{res:ImageResource undo}" Command="{Binding CancelCommand}" CommandParameter="Apply" Margin="9,9,0,0" HorizontalOptions="Start" VerticalOptions="Start"/>
+                    <ImageButton Grid.Row="0" Source="{res:ImageResource done}" Command="{Binding ApplyChangesCommand}" CommandParameter="Apply" Margin="0,9,9,0" HorizontalOptions="End" VerticalOptions="Start"/>
                   
                     <CollectionView Grid.Row="1" ItemsSource="{Binding ColorCollect}"  HeightRequest="32">
                         <CollectionView.ItemsLayout>
@@ -220,7 +220,7 @@
                     </Grid.ColumnDefinitions>
                     <BoxView Grid.RowSpan="2" BackgroundColor="Black" Opacity="0.7" />
 
-                    <ImageButton Grid.Row="0" Source="{res:ImageResource clear}" Command="{Binding ApplyChangesCommand}" Margin="0,7,7,0" HorizontalOptions="EndAndExpand"/>
+                    <ImageButton Grid.Row="0" Source="{res:ImageResource clear}" Command="{Binding ApplyChangesCommand}" Margin="0,9,9,0" HorizontalOptions="EndAndExpand"/>
 
                     <CollectionView Grid.Row="1" Margin="0" ItemSizingStrategy="MeasureFirstItem" ItemsSource="{Binding Config.Stickers}" VerticalOptions="FillAndExpand" BackgroundColor="Transparent">
                         <CollectionView.ItemsLayout>
@@ -249,10 +249,10 @@
 
                 </Grid>
 
-                <ImageButton Source="{res:ImageResource arrow_back}" Command="{Binding EditFinishCommand}" IsVisible="{Binding ButtonsVisible}" IsEnabled="{Binding ButtonsVisible}" Margin="7,7,0,0" VerticalOptions="Start" HorizontalOptions="Start"/>
+                <ImageButton Source="{res:ImageResource arrow_back}" Command="{Binding EditFinishCommand}" IsVisible="{Binding ButtonsVisible}" IsEnabled="{Binding ButtonsVisible}" Margin="9,9,0,0" VerticalOptions="Start" HorizontalOptions="Start"/>
 
 
-                <StackLayout VerticalOptions="Start" Orientation="Vertical" IsVisible="{Binding ButtonsVisible}" IsEnabled="{Binding ButtonsVisible}" HorizontalOptions="End" Margin="0,7,7,0">
+                <StackLayout VerticalOptions="Start" Orientation="Vertical" IsVisible="{Binding ButtonsVisible}" IsEnabled="{Binding ButtonsVisible}" HorizontalOptions="End" Margin="0,9,9,0">
                     <ImageButton Source="{res:ImageResource save}" Command="{Binding EditFinishCommand}" CommandParameter="Save" HorizontalOptions="End"/>
                     <ImageButton Source="{res:ImageResource crop_rotate}" Command="{Binding SelectItemCommand}" CommandParameter="{x:Static editorpage:ImageEditType.CropRotate}" HorizontalOptions="End"/>
                     <ImageButton Source="{res:ImageResource format_shapes}" IsVisible="{Binding Config.CanAddText}" Command="{Binding SelectItemCommand}" CommandParameter="{x:Static editorpage:ImageEditType.Text}" HorizontalOptions="End"/>
